fix(contacts): adjust contact item alignment and update success toast positioning and styling

--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -77,7 +77,6 @@
 
 .contact-item {
     display: flex;
-    align-items: center;
     padding: 10px;
     margin-bottom: 5px;
     border-radius: 8px;
@@ -458,17 +457,17 @@
 
 .contact-success-toast {
     position: fixed;
-    top: -80px;
+    top: 100%;
     left: 50%;
-    transform: translateX(-50%);
-    background-color: #2A3647;
+    transform: translate(-50%, -50%);
+    background-color: rgb(42, 54, 71, 0.9);
     color: #ffffff;
     font-size: 16px;
-    padding: 16px 24px;
-    border-radius: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+    padding: 24px 32px;
+    border-radius: 24px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
     white-space: nowrap;
-    transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 0.4s ease;
+    animation: messageStartup 0.5s forwards ease-in-out, messageHide 0.5s 1.7s forwards ease-in-out;
     opacity: 0;
     z-index: 9999;
 }
@@ -476,7 +475,7 @@
 .contact-success-toast.show {
     top: 120px;
     opacity: 1;
-    transform: translateX(-50%) translateY(0);
+    transform: translate(-50%, -50%);
 }
 
 @media (max-width: 1024px) {
@@ -780,7 +779,11 @@
     }
 
     .avatar {
-        transform: translate(-70px, 0px);
+        transform: translateX(20px);
+    }
+
+    .contact-info {
+        padding-left: 35px;
     }
 }
 
