--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -150,7 +150,7 @@ body.app-page {
   }
 
   .main-wrapper {
-    margin-left: 72px;
+    margin-left: 0;
   }
 
   .main-header {
@@ -241,7 +241,6 @@ body.app-page {
   }
 
   .main-wrapper {
-    margin-left: 0;
     width: 100%;
     padding-bottom: 80px;
   }
